# cp

./: .clang-format  .clangd  .gitignore  .nvim.lua  CMakeLists.txt  brute.cpp  compile_flags.txt  compile_flags_deb.txt  compile_flags_prod.txt  deb  gen  gen.cpp  gen_raw  gen_template.cpp  iter_gen  run  stdc++.h  template.cpp  time  val_gen  wrapper.h
merger/: CMakeLists.txt  emit.sh  main.cpp  merge.sh  merger.sh  test.sh
scripts/: asm.sh  preprocess.sh
template/: alias.cpp  all.cpp  base.cpp  concepts.cpp  container.cpp  deb.cpp  entry.cpp  entry.h  include_wrap.cpp  input.cpp  main_wrap.cpp  math.cpp  misc.cpp  modint.cpp  output.cpp  pr.cpp  scaffold.cpp  views.cpp  wec.cpp  wrapper.h
template/basic/: all.cpp  bitset.cpp  bool.cpp  con.cpp  deq.cpp  mset.cpp  pair.cpp  pr.cpp  set.cpp  set_con.cpp  stack.cpp  unordered.cpp  vec.cpp  wec.cpp
template/ds/: all.cpp  dsu.cpp  misc.cpp  segtree.cpp  sparse.cpp  suffix.cpp
testing/: DocTestExtension.cpp  DocTestExtension.h  compile_flags.txt  run_tests  template.cpp  test_input.txt  test_utils.cpp  tests.cpp  utils.cpp
